#=======================================
# Sources
#=======================================
set (barcode_sources
  QrEncode.cpp
)

add_library (Barcode STATIC
  ${barcode_sources}
)


#=======================================
# Where to find stuff
#=======================================
include_directories (
)

link_directories (
)


#=======================================
# Subdirectories
#=======================================


#=======================================
# Install
#=======================================
